--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.8",
     "@hookform/resolvers": "^5.2.2",
-    "next": "15.5.2",
+    "@next/third-parties": "^15.5.4",
+    "@vercel/analytics": "^1.5.0",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
